src/styles/HeroSection.css
.hero-card {
  text-align: center;
  position: relative;
}

.section-hero {
  padding: 0;
  width: 100%;
}

/* Scroll button */
.scroll-btn {
  position: absolute;
  bottom: -60px;
  left: 50%;
  transform: translateX(-50%);
  background: none;
  border: none;
  cursor: pointer;
  animation: bounce 1s infinite;
}

.scroll-icon {
  width: 32px;
  height: 32px;
  color: #E5A4C7;
}

.wedding-container {
  height: 100%;
  width: 100%;
  background-position: center;
  background-size: cover;
  justify-content: center;
  align-items: center;
  min-height: 100%;
  font-family: "Alyamama", serif;
  color: #000000;
}

.wedding-container::before {
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background: url('../assets/images/Martina\ &\ Marcello_17.jpeg');
  background-position: center;
  background-size: cover;
  opacity: 0.70;
  z-index: -1;
}

.wedding-subsection {
  margin: 8vh auto 0 auto;
}

.wedding-title {
  font-family: 'Eyesome Script',
  'Brush Script MT',
  'Segoe Script',
  'Lucida Handwriting',
  cursive;
  font-weight: 900;
  font-size: 5em;
  color: #000000 !important;
  margin: 33vh auto 0 auto;
  text-shadow:
    1px 1px 0 #E5A4C7,
    -1px -1px 0 #E5A4C7,
    1px -1px 0 #E5A4C7,
    -1px 1px 0 #E5A4C7;
}

.wedding-subtitle {
  font-family: "Alyamama", serif;
  font-size: 1.8em;
  color: #E5A4C7;
  -webkit-text-stroke: 0.25px white;
  margin: 5px auto;
}

/* WEDDING TITLE ADAPTER */
/* Molto basso: fino a 600px altezza */
@media (max-height: 600px) and (max-width:600px) {
  .wedding-title {
    margin: 23vh auto 0 auto;
    font-size: 2.7em;
  }

  .wedding-subsection {
    margin: 5vh auto 0 auto;
  }
}

/* Basso: 601px - 750px altezza */
@media (min-height: 601px) and (max-height: 750px) {
  .wedding-title {
    margin: 20vh auto 0 auto;
    font-size: 3em;
  }

  .wedding-subsection {
    margin: 6vh auto 0 auto;
  }
}

/* Medio-basso: 751px - 900px altezza */
@media (min-height: 751px) and (max-height: 900px) {
  .wedding-title {
    margin: 30vh auto 0 auto;
    font-size: 4em;
  }
}

/* Medio: 901px - 1050px altezza */
@media (min-height: 901px) and (max-height: 1050px) {
  .wedding-title {
    margin: 35vh auto 0 auto;
  }
}

/* Medio-alto: 1051px - 1200px altezza */
@media (min-height: 1051px) and (max-height: 1200px) {
  .wedding-title {
    margin: 40vh auto 0 auto;
  }
}

/* Alto: oltre 1200px altezza */
@media (min-height: 1201px) {
  .wedding-title {
    margin: 45vh auto 0 auto;
  }
}

